# fasttwilio

./: Dockerfile  README.md  development.env  docker-compose.yml  pyproject.toml  run_service.sh
.github/workflows/: aws-to-ecr.yml
fasttwilio/: db_manager.py  dependencies.py  main.py  models.py
fasttwilio/repositories/: generic_repository.py  student_repository.py
fasttwilio/routers/: auth_router.py  student_router.py  twilio_router.py
fasttwilio/services/: auth_service.py  student_service.py
tests/: conftest.py  test_student.py
