[project]
name = "fasttwilio"
version = "0.1.0"
description = ""
authors = [
    {name = "Paolo Audiberti",email = "pta200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "twilio (>=9.10.0,<10.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.136.0,<0.137.0)",
    "pymongo (>=4.17.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # The following are specific to Black, you probably don't want those.
    tests/data/
    | profiling/
)
'''

[tool.isort]
profile = "black"