[project]
name = "fasttwilio"
version = "0.1.1"
description = ""
authors = [
    {name = "Paolo Audiberti",email = "pta200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "twilio (>=9.10.0,<10.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.136.0,<0.137.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
bandit = "^1.9.4"
pip-audit = "^2.10.0"
pytest-env = "^1.6.0"

[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # The following are specific to Black, you probably don't want those.
    tests/data/
    | profiling/
)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
env_files = [
    "development.env",
    ".test.env"
]
